<?xml version="1.0" encoding="utf-8"?><!--
Copyright (C) 2012 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->

<resources>
    <string name="app_name">HW1: Temperature Conversion</string>
    <string name="help_text">This is arbitrary help text</string>
    <string name="_100">100</string>
    <string name="convert">Convert</string>
    <string name="temperature_100_00_c_is_212_00_f">Temperature 100.00 (C) is 212.00 (F)</string>
    <string name="_32">32</string>
    <string name="temperature_32_00_f_is_0_00_c">Temperature 32.00 (F) is 0.00 (C)</string>
</resources>